force-app/main/default/objects/Social_Channel_Config__c/Social_Channel_Config__c.object-meta.xml
<CustomObject>
    <description>Stores configuration for each social media channel (Facebook Page, Instagram account, etc.) connected to Omni-Channel.</description>
    <label>Social Channel Config</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Channel Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>