force-app/main/default/objects/Social_Channel_Config__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <description>Instagram long-lived User Access Token (valid 60 days). Restrict field-level security to Admins only. Do NOT expose to agents.</description>
    <label>Access Token</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>