force-app/main/default/objects/Social_Channel_Config__c/fields/App_Secret__c.field-meta.xml
<CustomField>
    <fullName>App_Secret__c</fullName>
    <description>Instagram App Secret from the Meta App Dashboard. Used for webhook X-Hub-Signature-256 validation and token exchange. Restrict FLS to Admins only.</description>
    <label>App Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>