force-app/main/default/objects/Social_Channel_Config__c/fields/Instagram_App_Id__c.field-meta.xml
<CustomField>
    <fullName>Instagram_App_Id__c</fullName>
    <description>The App ID (numeric) from the Meta App Dashboard. Used when building the OAuth authorization URL.</description>
    <label>Instagram App ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>