force-app/main/default/objects/Social_Channel_Config__c/fields/Last_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Verified_Date__c</fullName>
    <label>Last Verified Date</label>
    <type>DateTime</type>
</CustomField>