force-app/main/default/objects/Social_Channel_Config__c/fields/OAuth_Redirect_Uri__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Redirect_Uri__c</fullName>
    <description>The full callback URL registered in the Meta App Dashboard (e.g. https://YOUR_SITE.force.com/services/apexrest/social/oauth/callback). Must exactly match.</description>
    <label>OAuth Redirect URI</label>
    <length>500</length>
    <type>Text</type>
</CustomField>