force-app/main/default/objects/Social_Channel_Config__c/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <label>Page / Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>