force-app/main/default/objects/Social_Channel_Config__c/fields/Token_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Token_Expiry_Date__c</fullName>
    <description>Expiry date/time of the stored Access Token. InstagramTokenRefreshScheduler will refresh 7 days before this date.</description>
    <label>Token Expiry Date</label>
    <type>DateTime</type>
</CustomField>