force-app/main/default/objects/Social_Channel_Config__c/fields/Webhook_Verify_Token__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Verify_Token__c</fullName>
    <label>Webhook Verify Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>